precompiles/utils-macro/tests/02-parse-invalid-enum.stderr
error: expected one of `!` or `::`, found `(`
  --> $DIR/02-parse-invalid-enum.rs:16:2
   |
16 |     Toto,
   |     ^^^^ expected one of `!` or `::`
